--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-net --allow-read --reload ./src/main.ts"
+    "dev": "deno run --watch --allow-net --allow-read --reload ./src/main.ts",
+    "compile-linux": "deno compile --allow-net --allow-read --output ./bin/gpt-cli --target x86_64-unknown-linux-gnu ./src/main.ts"
   },
   "imports": {
     "dotenv": "https://deno.land/x/dotenv@v3.2.2/mod.ts"
